# dagdi

./: .gitignore  Dockerfile.build  LICENSE  README.md  dagdi.spec  entry.py  pyproject.toml  setup.ps1  setup.sh  update.ps1  update.sh
.github/workflows/: release.yml
config/: new-dagdi-template-format.yaml  old-dagdi-template-format.yaml  sample-app.yaml  sample-localhostDev.yaml
documentation/: 01-project-overview.md  02-architecture-and-flow.md  03-configuration-reference.md  04-context-and-scope-resolution.md  05-command-reference.md  06-ssh-execution-and-service-control.md  07-development-testing-and-extensibility.md  08-known-behaviors-limitations-and-improvements.md  09-dagdi-template-walkthrough.md  11-yaml-templates-summary.md  README.md
src/dagdi/: __init__.py  cli.py  concurrency.py  interactive.py  logging_config.py  models.py  resolver.py
src/dagdi/commands/: __init__.py  config.py  context.py  discovery.py  logs.py  monitoring.py  service_management.py  ssh.py
src/dagdi/config/: loader.py  merger.py  resolver.py  validator.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/properties/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_command_builder.py  test_config_loader.py  test_config_merger.py  test_config_settings.py  test_config_validator.py  test_context_manager.py  test_context_storage.py  test_discovery.py  test_integration.py  test_interactive.py  test_logs.py  test_monitoring.py  test_resolver.py  test_service_management.py  test_ssh_command.py  test_ssh_connection_pool.py  test_ssh_executor.py  test_themes.py
(+11 files in other folders)
